<resources>
    <string name="app_name">StudyApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language">Change Language</string>
    <string name="submit">Submit</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="answer">Answer:</string>
    <string name="question">Question:</string>
    <string name="title">Title:</string>
    <string name="card_created">Card Created</string>
    <string name="add_language">Add Language</string>
    <string name="language">Language</string>
    <string name="add_card">Add Card</string>
</resources>